Migrate all annotations to inspections
The primary motivation is that inspections can be
selectively (or globally) diabled. That's just not
possible with annotations.

But it's also nice to have them all plugged in via Kotlin.

Another bonus is better documentation possibilities -- but
we are currently lacking specifics for most of them.